change secretName parameter to be more meaningful
